Fixed some issues
Created the banner under the Navbar

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
         </div>
     </div>
 
+    <div id="empBox">
+
+    </div>
+
     <div id="sliding">
         <div class="c">
             <div class="swiper">
@@ -194,6 +198,7 @@
               
               </div>
         </div>
+    </div>
     </div>
 </body>
 </html>
