--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         <div id="secondDiv">
             <div>
                 <div id="tsd">
-                    <a href=""><img id="LiciousLogo" src="https://www.licious.in/img/default/licious-logo.svg" alt="Licious"></a>
+                    <a href="/index.html"><img id="LiciousLogo" src="https://www.licious.in/img/default/licious-logo.svg" alt="Licious"></a>
                 </div>
                 <div id="tsd1">
                     <div id="locimg">
                         <img src="https://www.licious.in/img/default/location_icon.svg" alt="location_img">
                     </div>
                     <div id="loctext"> 
-                        <p>Select City</p>
+                        <p id="scity">Select City</p>
                         <select name="" id="location">
-                            <option value="enter location">Enter City</option>
+                            <option value=""disabled selected hidden>Enter City</option>
                             <option value="Bengaluru">Bengaluru</option>
                             <option value="NCR ">NCR </option>
                             <option value="Hyderabad">Hyderabad</option>
@@ -199,6 +199,11 @@
               </div>
         </div>
     </div>
+    </div>
+    <div id="liway">
+        <div id="liciousway">
+            <img src="/Downloaded Images/Licious Way.PNG" alt="Licious Way">
+        </div>
     </div>
 </body>
 </html>
