hover issue solve

--- a/Atul1/html/today.html
+++ b/Atul1/html/today.html
@@ -6,8 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>happy-hours</title>
     <link rel="stylesheet" href="../styles/today.css"/>
+    <script
+      src="https://kit.fontawesome.com/afc5c86662.js"
+      crossorigin="anonymous"
+    ></script>
+
 </head>
 <body>
+    <div class="refermain">
+        <p id="refhome"><a href="">Home&nbsp;</a></p>
+        <p><i class="fa-solid fa-caret-right"></i>
+        </p>
+        <p class="atultoday">&nbsp;Today's Deals</p>
+    </div>
+    <div class="head">
+        <h2>Today's Deals</h2>
+    </div>
+    <div class="bar"> <hr></div>
+   
     <div id="container">
         
     </div>
