--- a/Atul2/html/egg.html
+++ b/Atul2/html/egg.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>eggs</title>
     <link rel="stylesheet" href="../styles/egg.css"/>
+    <script
+      src="https://kit.fontawesome.com/afc5c86662.js"
+      crossorigin="anonymous"
+    ></script>
+
 </head>
 <body>
+    <div class="refermain">
+        <p id="refhome"><a href="">Home&nbsp;</a></p>
+        <p><i class="fa-solid fa-caret-right"></i>
+        </p>
+        <p class="atulegg">&nbsp;Eggs</p>
+    </div>
+    <div class="head">
+        <h2>Eggs</h2>
+    </div>
+    <div class="bar"> <hr></div>
     <div id="container">
         
     </div>
