hover issue2 solved

--- a/Atul1/html/today.html
+++ b/Atul1/html/today.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <div class="refermain">
-        <p id="refhome"><a href="">Home&nbsp;</a></p>
+        <p id="refhome"><a href="" class="atultoday">Home&nbsp;</a></p>
         <p><i class="fa-solid fa-caret-right"></i>
         </p>
-        <p class="atultoday">&nbsp;Today's Deals</p>
+        <p id="clr">&nbsp;Today's Deals</p>
     </div>
     <div class="head">
         <h2>Today's Deals</h2>
