--- a/Atul2/html/egg.html
+++ b/Atul2/html/egg.html
@@ -14,10 +14,10 @@
 </head>
 <body>
     <div class="refermain">
-        <p id="refhome"><a href="">Home&nbsp;</a></p>
+        <p id="refhome"><a href="" class="atulegg">Home&nbsp;</a></p>
         <p><i class="fa-solid fa-caret-right"></i>
         </p>
-        <p class="atulegg">&nbsp;Eggs</p>
+        <p id="clr">&nbsp;Eggs</p>
     </div>
     <div class="head">
         <h2>Eggs</h2>
