--- a/shilajit_html/spreads.html
+++ b/shilajit_html/spreads.html
@@ -15,6 +15,11 @@
         <p>></p>
         <p>&nbsp;Spreads</p>
     </div>
+    
+    <div class="head">
+        <h2>Spreads</h2>
+        <hr>
+    </div>
      <!-- main div -->
     <div id="container">
         
