--- a/shilajit_html/combo.html
+++ b/shilajit_html/combo.html
@@ -15,6 +15,10 @@
         <p>></p>
         <p>&nbsp;Combo</p>
     </div>
+    <div class="head">
+        <h2>Combos</h2>
+        <hr>
+    </div>
     <!-- main div -->
     <div id="container">
         
