--- a/shilajit_html/fish.html
+++ b/shilajit_html/fish.html
@@ -16,6 +16,11 @@
         <p>></p>
         <p>&nbsp;Fish & Seafood</p>
     </div>
+
+    <div class="head">
+        <h2>Fish & Seafood</h2>
+        <hr>
+    </div>
        <!-- main div -->
 
     <div id="container">
