--- a/SAGAR/home.html
+++ b/SAGAR/home.html
@@ -108,7 +108,7 @@
             <div>
             <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/31/cat_tile_img/1615563449.8908--2021-03-1221:07:29--472?format=webp">
             </div>
-            <div style="text-align: center;  color : #3e4d60; margin-top: -15px;"><h3>Super Saver P</h3></div>
+            <div style="text-align: center;  color : #3e4d60; margin-top: -15px;"><h3>Super Saver Parck</h3></div>
         </div>
         
         
