addresspage function  id change

--- a/addresspage/1.html
+++ b/addresspage/1.html
@@ -65,11 +65,11 @@
       <!-- ------------------------ -->
       <div>
         <div class="radioDiv">
-          <input type="radio" name="" id="A1" />
+          <input type="radio" name="" />
           <span>Add Adress</span>
         </div>
         <div class="radioDiv">
-          <input type="radio" name="" id="A2" />
+          <input type="radio" name="" />
           <a href=""><span>Payment Method</span></a>
         </div>
       </div>
