--- a/rohit/html/readytocook.html
+++ b/rohit/html/readytocook.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mutton</title>
+    <title>Ready To Cook</title>
     <script src="https://kit.fontawesome.com/afc5c86662.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../styles/mutton.css"/>
+    <link rel="stylesheet" href="../styles/mutton.css" />
 </head>
+
 <body>
     <div class="refermain">
         <p id="refhome"><a href="" class="atultoday">Home&nbsp;</a></p>
         <p><i class="fa-solid fa-caret-right"></i></p>
-        <p id="chickenHead">&nbsp;Mutton</p>
+        <p id="chickenHead">&nbsp;Ready To Cook</p>
     </div>
     <div class="head">
-        <h2>Mutton</h2>
+        <h2>Ready To Cook</h2>
     </div>
     <div class="bar">
         <hr />
     </div>
     <div id="container">
-        
+
     </div>
 </body>
+
 </html>
-<script src="../data/muttondata.js"></script>
-<script src="../script/mutton.js"></script>
+<script src="../data/readytocookdata.js"></script>
+<script src="../script/readytocook.js"></script>
