Landing Page almost done (Footer, Login, addtocart functionality remaining)
Login and Add to cart functionality left.

--- a/Arpit Html Files/chicken.html
+++ b/Arpit Html Files/chicken.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Hours</title>
+    <title>Chicken Online - Order Fresh Chicken at Best Price - Licious</title>
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="/Downloaded Images/redketchup/favicon.ico">
     <link rel="stylesheet" href="/Downloaded Images/redketchup/android-chrome-192x192.png">
@@ -22,9 +22,10 @@
     <!-- <link rel="stylesheet" href="/SAGAR/home.css"> -->
     <link rel="stylesheet" href="/Styles/cartsidebar.css">
     <link rel="stylesheet" href="/Styles/loginsidebar.css">
-    <link rel="stylesheet" href="/Atul1/styles/today.css">
+    <link rel="stylesheet" href="/sachin/styles/chicken.css">
 
     <!-- script -->
+    <script
     <script
     src="https://kit.fontawesome.com/afc5c86662.js"
     crossorigin="anonymous"
@@ -129,7 +130,6 @@
             </div>
         </div>
 
-
         <!-- Main Nav Bar with Product Names -->
 
         <div id="thirdDiv"> 
@@ -209,28 +209,26 @@
             </div>
         </div>
     </div>
-    
+
     <!-- empty container -->
     <div id="empBox"></div>
 
 
 
-    <!-- Todays Deals -->
+    <!-- Chicken -->
 
     <div class="refermain">
         <p id="refhome"><a href="/index.html" class="atultoday">Home&nbsp;</a></p>
-        <p><i class="fa-solid fa-caret-right"></i>
-        </p>
-        <p id="clr">&nbsp;Today's Deals</p>
-    </div>
-    <div class="head">
-        <h2>Today's Deals</h2>
-    </div>
-    <div class="bar"> <hr></div>
-   
-    <div id="container">
-        
-    </div>
+        <p><i class="fa-solid fa-caret-right"></i></p>
+        <p id="chickenHead">&nbsp;Chicken</p>
+      </div>
+      <div class="head">
+        <h2>Chicken</h2>
+      </div>
+      <div class="bar"><hr /></div>
+      <!-- ------------------ -->
+      <div id="container"></div>
+
 
     <!-- Cart Side Bar Imp -->
 <div id="cartside">
@@ -289,5 +287,5 @@
 <script src="/SAGAR/homedata.js"></script>
 <script src="/javaScript/cartsidebar.js"></script>
 <script src="/javaScript/LoginSidebar.js"></script>
-<script src="/Atul1/data/todaydata.js"></script>
-<script src="/Atul1/script/today.js"></script>
+<script src="/sachin/data/chickendata.js"></script>
+<script src="/sachin/script/chicken.js"></script>
