--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <img src="https://dao54xqhg9jfa.cloudfront.net/Category/a2996820-bac5-5eb5-edf8-eae5bff352ce/original/1592902158.6637--2020-06-2314_19_18--472.png?format=webp" alt="chicken">
                     </div>
                     <div class="sametext">
-                        <a style="margin-left: 10px;" href="#">Chicken</a>
+                        <a style="margin-left: 10px;" href="/Arpit Html Files/chicken.html">Chicken</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -147,7 +147,7 @@
                         <img src="https://dao54xqhg9jfa.cloudfront.net/Category/574f3ef3-e983-e441-ac54-af394e1dc0d1/original/1592241659.9546--2020-06-1522_50_59--472.png?format=webp" alt="fish&seafood">
                     </div>
                     <div class="sametext">
-                        <a style="font-size: 11px;" href="#">Fish & Seafood</a>
+                        <a style="font-size: 11px;" href="/Arpit Html Files/fishfood&seafood.html">Fish & Seafood</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -155,7 +155,7 @@
                         <img src="https://dao54xqhg9jfa.cloudfront.net/Category/06eb2239-1fcc-a5de-2d57-a0081bca5c80/original/1592241843.644--2020-06-1522_54_03--472.png?format=webp" alt="eggs">
                     </div>
                     <div class="sametext">
-                        <a style="margin-left: 18px;" href="#">Eggs</a>
+                        <a style="margin-left: 18px;" href="/Arpit Html Files/eggs.html">Eggs</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -163,7 +163,7 @@
                         <img src="https://dao54xqhg9jfa.cloudfront.net/Category/493a653d-56cb-fc9a-7a33-5b30c1a3d27e/original/1592241599.8492--2020-06-1522_49_59--472.png?format=webp" alt="mutton">
                     </div>
                     <div class="sametext">
-                        <a style="margin-left: 12px;" href="#">Mutton</a>
+                        <a style="margin-left: 12px;" href="/Arpit Html Files/Mutton.html">Mutton</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -171,7 +171,7 @@
                         <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/4/web_icon/1618835088.2308--2021-04-1917:54:48--472?format=webp" alt="ready_to_cook">
                     </div>
                     <div class="sametext">
-                        <a style="font-size: 11px;" href="#">Ready to Cook</a>
+                        <a style="font-size: 11px;" href="/Arpit Html Files/readytocook.html">Ready to Cook</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -179,7 +179,7 @@
                         <img src="https://dao54xqhg9jfa.cloudfront.net/Category/1aebd012-022b-0e44-a673-21818a98320c/original/1592241756.9036--2020-06-1522_52_36--472.png?format=webp" alt="spreads">
                     </div>
                     <div class="sametext">
-                        <a style="margin-left: 12px;" href="#">Spreads</a>
+                        <a style="margin-left: 12px;" href="/Arpit Html Files/spreads.html">Spreads</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -187,7 +187,7 @@
                         <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/37/web_icon/1612872334.9746--2021-02-0917:35:34--472?format=webp" alt="combos">
                     </div>
                     <div class="sametext">
-                        <a style="margin-left: 10px;" href="#">Combos</a>
+                        <a style="margin-left: 10px;" href="/Arpit Html Files/combos.html">Combos</a>
                     </div>
                 </div>
                 <div class="sameelem">
@@ -195,7 +195,7 @@
                         <img src="https://s3-ap-southeast-1.amazonaws.com/licious/cat/31/web_icon/1615563547.1026--2021-03-1221:09:07--472?format=webp" alt="super_saver">
                     </div>
                     <div class="sametext">
-                        <a style="margin-left: 5px;" href="#">Super Saver</a>
+                        <a style="margin-left: 5px;" href="/Arpit Html Files/supersaver.html">Super Saver</a>
                     </div>
                 </div>
             </div>
