Licious Project Completed
Final touchup completed.

--- a/Atul3/payment.html
+++ b/Atul3/payment.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Payment Form</title>
+    <title>Licious - Payment Deatil</title>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="/Downloaded Images/redketchup/favicon.ico">
+    <link rel="stylesheet" href="/Downloaded Images/redketchup/android-chrome-192x192.png">
+    <link rel="stylesheet" href="/Downloaded Images/redketchup/apple-touch-icon.png">
+    <link rel="stylesheet" href="/Downloaded Images/redketchup/favicon-16x16.png">
+    <link rel="stylesheet" href="/Downloaded Images/redketchup/favicon-32x32.png">
+
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -16,15 +23,15 @@
       <h1>Confirm Your Payment</h1>
       <div class="first-row">
         <div class="owner">
-          <h3>Card Holder</h3>
+          <h3>Card Holder Name</h3>
           <div class="input-field">
-            <input type="text" />
+            <input type="text" required>
           </div>
         </div>
         <div class="cvv">
           <h3>CVV</h3>
           <div class="input-field">
-            <input type="password" />
+            <input type="password" required>
           </div>
         </div>
       </div>
@@ -32,45 +39,24 @@
         <div class="card-number">
           <h3>Card Number</h3>
           <div class="input-field">
-            <input type="text" />
+            <input type="text" required>
           </div>
         </div>
       </div>
       <div class="third-row">
-        <h3>Card Number</h3>
+        <h3>Card Expiry</h3>
         <div class="selection">
           <div class="date">
-            <select name="months" id="months">
-              <option value="Jan">Jan</option>
-              <option value="Feb">Feb</option>
-              <option value="Mar">Mar</option>
-              <option value="Apr">Apr</option>
-              <option value="May">May</option>
-              <option value="Jun">Jun</option>
-              <option value="Jul">Jul</option>
-              <option value="Aug">Aug</option>
-              <option value="Sep">Sep</option>
-              <option value="Oct">Oct</option>
-              <option value="Nov">Nov</option>
-              <option value="Dec">Dec</option>
-            </select>
-            <select name="years" id="years">
-              <option value="2020">2020</option>
-              <option value="2019">2019</option>
-              <option value="2018">2018</option>
-              <option value="2017">2017</option>
-              <option value="2016">2016</option>
-              <option value="2015">2015</option>
-            </select>
+             <input type="month" required>
           </div>
           <div class="cards">
-            <img src="mc.png" alt="" />
-            <img src="vi.png" alt="" />
-            <img src="pp.png" alt="" />
+            <img src="mc.png" alt="Master Card" />
+            <img src="vi.png" alt="Visa" />
+            <img src="pp.png" alt="PayPal" />
           </div>
         </div>
       </div>
-      <a href="">Confirm</a>
+      <a href="/Arpit Html Files/Checkout_Success.html">Confirm</a>
     </div>
   </body>
 </html>
