--- a/addresspage/1.html
+++ b/addresspage/1.html
@@ -58,20 +58,10 @@
             />
           </div>
           <div class="space">
-            <input type="submit" id="login" value="Save & proceed" />
+            <button id="login"><a href="/Atul3/payment.html">Proceed to Checkout</a></button>
+            <!-- <a href="/Atul3/payment.html"><input type="submit" id="login" value="Proceed to Checkout" /></a> -->
           </div>
         </form>
-      </div>
-      <!-- ------------------------ -->
-      <div>
-        <div class="radioDiv">
-          <input type="radio" name="" />
-          <span>Add Adress</span>
-        </div>
-        <div class="radioDiv">
-          <input type="radio" name="" />
-          <a href=""><span>Payment Method</span></a>
-        </div>
       </div>
     </div>
   </body>
